# gestures

./: .gitignore  pyproject.toml  requiremnts.txt
embedding_handler/: app.py  settings.py
embedding_handler/src/: handler.py  model.py  video_utils.py
flashcards/: admin.py  forms.py  models.py  urls.py  views.py
flashcards/migrations/: 0001_initial.py
flashcards/static/flashcards/css/: sign-in.css
flashcards/static/js/: client.js
flashcards/templates/flashcards/: add_edit_cards.html  base.html  create_card_set.html  flashcards.html  view_cards.html
gestures/: asgi.py  settings.py  urls.py  wsgi.py
login/: admin.py  backend.py  forms.py  models.py  urls.py  views.py
login/migrations/: 0001_initial.py
login/static/login/js/: client.js
login/templates/users/: base.html  home.html  login.html  loginWithVideo.html  register.html
media/videos_uploaded/: recording.webm  recording_C3vyHfX.webm  recording_Ey1UWOl.webm  recording_IJo0e9h.webm  recording_aJezKRM.webm  recording_wcSC2WA.webm  recording_xN1fdEY.webm  recording_zhNRKr4.webm  test_10.webm  test_5.webm  test_6.webm  test_9_PPBUi8k.webm
static/css/: sign-in.css
static/js/: client.js
