[tool.poetry]
name = "gestures"
version = "0.1.0"
description = ""
authors = ["NickZdanchuk <grzdanin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"
Flask = "^2.2.3"
django-bootstrap-v5 = "^1.0.11"
requests = "^2.28.2"
opencv-python = "^4.7.0"
mediapipe = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
